# laravel-auditor

./: .gitignore  README.md  pyproject.toml
src/laravel_auditor/: __main__.py  maturity.py  report.py  scanner.py  server.py
src/laravel_auditor/agents/: auditor.py
src/laravel_auditor/analyzers/: domains.py  smells.py
