[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laravel-auditor"
version = "1.0.0"
description = "Laravel Architecture Auditor — MCP Server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
]

[project.scripts]
laravel-auditor = "laravel_auditor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/laravel_auditor"]
